<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayRTC Simple Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="create_and_connect">Create and Connect</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>
    <string name="connect_channel_id_hint">Enter the Channel ID</string>
    <string name="channel_id_hint">Channel ID</string>

    <string name="alert_title">@string/app_name</string>
    <string name="alert_message">Would like to exit?</string>
    <string name="alert_positive">OK</string>
    <string name="alert_negative">Cancle</string>

    <string name="other_disconnect_channel">Other peer is disconnected.</string>
    <string name="powered_by_playrtc">Powerd by PlayRTC.\nSK Telecom. CO, LTD.</string>

</resources>
